# my-qq-nonebot

my-bot/: .env  README.md  pyproject.toml
my-bot/my-bot/plugins/garbage-finding/: __init__.py
